[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Button_Mask.png" type="BitMap" id=1]
[ext_resource path="res://src/Button_Red.png" type="Texture" id=2]
[ext_resource path="res://src/Button_Green.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Puzzle_02/P_02.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
rotation = 0.00191139
script = ExtResource( 4 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.5
margin_top = -80.0
margin_right = 84.5
margin_bottom = 80.0
mouse_filter = 0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[node name="B_01" type="TextureButton" parent="GridContainer"]
margin_right = 43.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 21.3461, 19.7724 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )

[node name="B_02" type="TextureButton" parent="GridContainer"]
margin_left = 63.0
margin_right = 106.0
margin_bottom = 40.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )

[node name="B_03" type="TextureButton" parent="GridContainer"]
margin_left = 126.0
margin_right = 169.0
margin_bottom = 40.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )

[node name="B_04" type="TextureButton" parent="GridContainer"]
margin_top = 60.0
margin_right = 43.0
margin_bottom = 100.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )

[node name="B_05" type="TextureButton" parent="GridContainer"]
margin_left = 63.0
margin_top = 60.0
margin_right = 106.0
margin_bottom = 100.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )

[node name="B_06" type="TextureButton" parent="GridContainer"]
margin_left = 126.0
margin_top = 60.0
margin_right = 169.0
margin_bottom = 100.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )

[node name="B_07" type="TextureButton" parent="GridContainer"]
margin_top = 120.0
margin_right = 43.0
margin_bottom = 160.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )

[node name="B_08" type="TextureButton" parent="GridContainer"]
margin_left = 63.0
margin_top = 120.0
margin_right = 106.0
margin_bottom = 160.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )

[node name="B_09" type="TextureButton" parent="GridContainer"]
margin_left = 126.0
margin_top = 120.0
margin_right = 169.0
margin_bottom = 160.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_click_mask = ExtResource( 1 )
